oxiplate-derive/tests/crates/unreachable-stable/tests/broken/literal/char-two-chars.stderr
error: More than one character present in character literal. Consider using `"` instead of `'` to use a string literal instead.
 --> tests/broken/literal/char-two-chars.rs:4:23
  |
4 | #[oxiplate_inline("{{ 'hi' }}")]
  |                       ^^^^
